--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "module": "es/index.js",
   "dependencies": {
     "lodash-es": "^4.17.15",
+    "path-to-regexp": "^3.2.0",
     "single-spa": "^4.4.3",
     "tslib": "1"
   },
