--- a/package.json
+++ b/package.json
@@ -33,17 +33,24 @@
     "lodash-es": "^4.17.15",
     "path-to-regexp": "^3.2.0",
     "single-spa": "^4.4.3",
-    "systemjs": "^6.2.3",
     "tslib": "1"
   },
   "devDependencies": {
+    "@alife/saas-check-choose-org": "^1.3.8",
     "@types/classnames": "2",
     "@types/react": "16",
     "@types/react-dom": "16",
+    "@typescript-eslint/eslint-plugin": "1",
+    "@typescript-eslint/parser": "1",
     "antd": "3",
     "classnames": "2",
     "copyfiles": "2",
     "cross-env": "5",
+    "eslint": "5",
+    "eslint-config-ali": "7",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-react": "7",
+    "eslint-plugin-react-hooks": "1",
     "lesshint": "2",
     "pre-commit": "1",
     "prop-types": "15",
@@ -52,13 +59,6 @@
     "rimraf": "2",
     "stylelint": "7",
     "stylelint-config-standard": "16",
-    "@typescript-eslint/eslint-plugin": "1",
-    "@typescript-eslint/parser": "1",
-    "eslint": "5",
-    "eslint-config-ali": "7",
-    "eslint-plugin-import": "2",
-    "eslint-plugin-react": "7",
-    "eslint-plugin-react-hooks": "1",
     "typescript": "3"
   },
   "peerDependencies": {
