fix: git repository

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/alsc-sfe/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/alsc-sfe/"
+    "url": "https://github.com/alsc-sfe/we-app"
   },
   "author": "zetay",
   "files": [
