--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@saasfe/we-app",
   "version": "1.2.19-beta.0",
   "description": "微应用业务框架",
-  "homepage": "https://github.com/alsc-sfe/",
+  "homepage": "https://github.com/alsc-sfe/we-app",
   "repository": {
     "type": "git",
     "url": "https://github.com/alsc-sfe/we-app"
